# containerlab

./: Dockerfile  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
bgp_ls_collector/: __init__.py  config.py  main.py
bgp_ls_collector/api/: __init__.py  app.py
bgp_ls_collector/bgp/: __init__.py  constants.py  messages.py  session.py
bgp_ls_collector/bgp/bgpls/: __init__.py  attributes.py  nlri.py  tlvs.py
bgp_ls_collector/nokia/: __init__.py  extensions.py
bgp_ls_collector/topology/: __init__.py  graph.py  manager.py  models.py
